# OriginFlow

./: .env  .env.example  .gitignore  AGENTS.md  AGENT_TAXONOMY.md  AI_WIRING_LOG.md  CLAUDE.md  COMPONENT_ENHANCEMENT_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  ENGINEERING_PLAYBOOK.md  Makefile.backfill.mk  ODL_CANVAS_DEBUG.md  PRODUCTION_WIRING_SYSTEM.md  README.md  alembic.ini  check_routes.py  docker-compose.yml  download_model.py  env.example  how --name-only 5a5ce1e  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  test.db  test_dc_switch_fix.py  test_planner_commands.py  test_production_wiring_system.py  test_simple.py  test_solar_wiring_system.py  ui_guidelines.md  voice_and_tone.md
.claude/: settings.local.json
.github/workflows/: backfill-recording-rules.yml  ci.yml
.ipynb_checkpoints/: ENGINEERING_PLAYBOOK-checkpoint.md  requirements-checkpoint.txt  ui-guidelines-v3.2.1-checkpoint.md  ui_guidelines-checkpoint.md  ui_guidelines_1-checkpoint.md
alembic/: env.py
alembic/versions/: 000001_initial_complete_schema.py  0560f8aa0021_backfill_uploaded_at.py  123456789abc_add_governance_tables.py  1752409524_create_file_assets_table.py  1f2e3d4c5b6a_add_image_fields_to_file_asset.py  20250819_01_agents_persistence.py  20250819_02_action_approvals.py  20250819_03_policy_columns.py  2b1a0d3f7c8d_add_parent_asset_id_to_file_asset.py  3e094bc8e1d1_add_file_assets_table.py  47ddfcd8b6d3_add_file_asset_table.py  6c4534744901_add_cascade_delete_to_link.py  768c7f1c566a_initial_consolidated_migration.py  9123abcd4567_create_memory_table.py  a1b2c3d4e5f6_add_parsed_fields_to_file_asset.py  a1dfdbeeafb4_add_layer_column.py  add_ai_action_vectors_table.py  add_ports_dependencies_layer_columns.py  add_series_variants_columns.py  add_sub_elements_column.py  b5c66b21d36d_initial.py  b7b1f83bebc0_initial.py  b824b42b81b1_initial_consolidated_migration.py  c2ac3c5e70ae_initial_consolidated_migration.py  c7d8e9f0a1b2_add_parsing_status_fields.py  ce005598b788_create_links_table.py  create_design_vectors_table.py  d730308d8818_create_components_table.py  dd4899121b5a_add_component_master_table.py  e89a5814189e_merge_heads.py  e8f9c0d1b3a4_add_full_parsing_workflow_fields.py  f0e1d2c3b4a5_add_ai_action_log.py  f1a2b3c4d5e6_add_needs_manual_name_review_flag.py
backend/: __init__.py  config.py  database.py  logging.dev.json  logging.prod.json  main.py  schemas.py  test_odl_endpoints.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx-security.conf  nginx.conf
docs/: AGENTS.md  API_CONTRACTS.md  API_ENDPOINTS.md  APPROVALS.md  ARCHITECTURE_OVERVIEW.md  AUDIT_TRAIL.md  AUTO_WIRING.md  BREAKING_CHANGES.md  CI_BACKFILL.md  CLEANUP.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEPLOY_MONITORING.md  DOMAINS.md  EDGE_ROUTING.md  EVALS.md  FRONTEND_API_MIGRATION.md  FRONTEND_SYNC.md  GOVERNANCE.md  INTENT_FIREWALL.md  LAYOUT_PROVIDERS.md  LOGGING.md  MEMORY.md  OBSERVABILITY.md  ODL_ROUND_TRIP.md  ODL_SPEC.md  ODL_TROUBLESHOOTING.md  OPS.md  OPS_BACKFILL_RULES.md  ORCHESTRATOR.md  PLANNER.md  REAL_COMPONENT_SELECTION.md  RELEASE_CHECKLIST.md  STATE_AWARE_ACTION_RESOLVER.md  TENANT_POLICY.md  TESTING.md  TOOLS_CATALOG.md  TROUBLESHOOTING.md  additional_domain_agents.md  attributes-review.md  (+23 more)
domain_packs/: __init__.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
qdrant_storage/: raft_state.json
scripts/: backfill_rules.sh  smoke.sh
tests/: test_agents_and_calibrator.py  test_compatibility_engine.py  test_compatibility_report.py  test_component_agent.py  test_edge_router_builtin.py  test_layout_provider_fallback.py  test_library_selector.py  test_long_planner.py  test_metrics_service.py  test_network_validation_agent.py  test_odl_roundtrip_parse.py  test_orchestrator_flow.py  test_originflow_tools.py  test_request_validation_middleware.py  test_state_action_resolver.py  test_wiring_idempotent.py
(+573 files in other folders)
